--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "chart.js": "^4.4.3",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.2",
     "rxjs": "~7.8.0",
